--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,11 @@ jobs:
 
       - name: Install DuckDB
         run: |
+          mkdir -p $HOME/duckdb/include $HOME/duckdb/lib
           wget https://github.com/duckdb/duckdb/releases/download/v1.4.1/libduckdb-linux-amd64.zip
-          unzip libduckdb-linux-amd64.zip -d $HOME/duckdb
+          unzip libduckdb-linux-amd64.zip
+          mv duckdb.h $HOME/duckdb/include/
+          mv libduckdb.so $HOME/duckdb/lib/
           echo "DUCKDB_DIR=$HOME/duckdb" >> $GITHUB_ENV
 
       - name: Install dependencies
