--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Tests
 
 on:
   push:
@@ -48,7 +48,3 @@ jobs:
 
       - name: Run tests
         run: bundle exec rspec
-
-      - name: Run Rubocop
-        run: bundle exec rubocop
-        continue-on-error: true
