Refactor: Eliminate final RuboCop violations (TDD) - 0 violations achieved!
Extract SessionStatistics and BackgroundWorkerManager classes to achieve
zero RuboCop violations while maintaining 100% test coverage.

Changes:
- Extract SessionStatistics from Formatter (token/spend/time display)
- Extract BackgroundWorkerManager from Application (worker lifecycle)
- Formatter: 275 → 249 lines (-26 lines)
- Application: 257 → 247 lines (-10 lines)
- Add 17 new unit tests (623 → 640 tests, all passing)
- Fix CI: Install ripgrep dependency for file_grep tests
- Update README: Document ripgrep requirement
- Remove obsolete pending test in console_io_spec

Results:
- RuboCop: 2 → 0 violations (100% reduction, 97 → 0 total journey)
- Tests: 640 passing, 0 failures, 0 pending
- Coverage: 100% maintained throughout refactoring

All refactoring followed strict TDD (Red-Green-Refactor) cycle.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
           ruby-version: '3.3'
           bundler-cache: false
 
+      - name: Install ripgrep
+        run: sudo apt-get update && sudo apt-get install -y ripgrep
+
       - name: Install DuckDB
         run: |
           mkdir -p $HOME/duckdb/include $HOME/duckdb/lib
