Implement Phase 6 (partial): Add time-range filtering to RAG pipeline
Add after_date and before_date parameters to filter RAG retrieval results
by timestamp, enabling queries for recent or historical conversations/exchanges.

Changes:
- Add after_date and before_date parameters to EmbeddingStore search methods
- Add time-range filter helper to build SQL WHERE clauses
- Integrate time-range parameters through RAGContext, RAGRetriever, and search processors
- Update .rubocop.yml to allow additional parameters for search methods
- Add 8 comprehensive tests for time-range filtering (conversations and exchanges)
- Update existing RAGRetriever tests to expect new parameters
- Apply RuboCop auto-corrections to unrelated files

Tests: 1996 examples, 0 failures
Coverage: 98.15% line / 90.73% branch (maintained within 0.01% margin)

Phase 6 now 62% complete (5/8 tasks).

Generated with ai4mgreenly

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -71,6 +71,7 @@ Metrics/ParameterLists:
   Exclude:
     - 'lib/nu/agent/workers/conversation_summarizer.rb'  # Worker needs multiple dependencies for initialization
     - 'lib/nu/agent/workers/exchange_summarizer.rb'  # Worker needs multiple dependencies for initialization
+    - 'lib/nu/agent/embedding_store.rb'  # Search methods need multiple optional filter parameters
 
 # Lint - acceptable patterns
 Lint/HashCompareByIdentity:
